@@ -133,6 +133,7 @@ Clients:
 - Fix incorrect output formatting in mosquitto_sub when using field widths
   with `%x` and `%X` for printing the payload in hex.
 - Add float printing option to mosquitto_sub.
+- Fix `-f` and `-s` options in mosquitto_rr.
 
 
 2.0.14 - 2021-11-17
